unpackaged/main/default/objects/nbavs__CallLog__c/nbavs__CallLog__c.object-meta.xml
<CustomObject>
    <label>Call Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>