unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__aFlag__c.field-meta.xml
<CustomField>
    <fullName>nbavs__aFlag__c</fullName>
    <description>a Flag Value stored here its Recorded or Empty</description>
    <label>aFlag</label>
    <length>25</length>
    <type>Text</type>
</CustomField>