unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__aUUId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__aUUId__c</fullName>
    <description>A channel Recording Id</description>
    <label>aUUId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>