unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__bFlag__c.field-meta.xml
<CustomField>
    <fullName>nbavs__bFlag__c</fullName>
    <description>b Flag Value should stored here.</description>
    <label>bFlag</label>
    <length>25</length>
    <type>Text</type>
</CustomField>