unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__bUUId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__bUUId__c</fullName>
    <description>b channel UUId</description>
    <inlineHelpText>b channel UUId value.</inlineHelpText>
    <label>bUUId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>