unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__DateTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DateTime__c</fullName>
    <label>Date / Time</label>
    <type>DateTime</type>
</CustomField>