unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__Direction__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Direction__c</fullName>
    <label>Direction</label>
    <length>64</length>
    <type>Text</type>
</CustomField>