unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__EncryptUUId1__c.field-meta.xml
<CustomField>
    <fullName>nbavs__EncryptUUId1__c</fullName>
    <label>EncryptUUId1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>