unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__EncryptUUId2__c.field-meta.xml
<CustomField>
    <fullName>nbavs__EncryptUUId2__c</fullName>
    <label>EncryptUUId2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>