unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__FromDate__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromDate__c</fullName>
    <description>Call Logs search results purpose created this filed.</description>
    <label>From Date</label>
    <type>Date</type>
</CustomField>