unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__FromDevice__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromDevice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Device</label>
    <referenceTo>nbavs__Device__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>