unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__FromDeviceId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromDeviceId__c</fullName>
    <label>From Device Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>