unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__FromDeviceName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromDeviceName__c</fullName>
    <label>From Device Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>