unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__FromName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromName__c</fullName>
    <label>From Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>