unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__FromNumber__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromNumber__c</fullName>
    <label>From Nmber</label>
    <type>Phone</type>
</CustomField>