unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__FromUser__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FromUser</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Call_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>