unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__FromUserId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromUserId__c</fullName>
    <label>From User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>