unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__hasAccess__c.field-meta.xml
<CustomField>
    <fullName>nbavs__hasAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access</label>
    <type>Checkbox</type>
</CustomField>