unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__Recorded_A__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Recorded_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recorded A</label>
    <type>Checkbox</type>
</CustomField>