unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__TimeHunting__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TimeHunting__c</fullName>
    <label>Time Hunting</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>