unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__ToDate__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToDate__c</fullName>
    <description>Call Log Search purpose created this filed.</description>
    <label>To Date</label>
    <type>Date</type>
</CustomField>