unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__ToDevice__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToDevice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Device</label>
    <referenceTo>nbavs__Device__c</referenceTo>
    <relationshipLabel>Call Logs (To Device)</relationshipLabel>
    <relationshipName>Call_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>