unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__ToDeviceId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToDeviceId__c</fullName>
    <label>To Device Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>