unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__ToDeviceName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToDeviceName__c</fullName>
    <label>To Device Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>