unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__ToName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToName__c</fullName>
    <label>To Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>