unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__ToNumber__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToNumber__c</fullName>
    <label>To Number</label>
    <type>Phone</type>
</CustomField>