unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__ToNumberDialled__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToNumberDialled__c</fullName>
    <label>ToNumberDialled</label>
    <length>32</length>
    <type>Text</type>
</CustomField>