unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__ToUser__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Call Logs (To User)</relationshipLabel>
    <relationshipName>Call_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>