unpackaged/main/default/objects/nbavs__CallLog__c/fields/nbavs__ToUserId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToUserId__c</fullName>
    <label>To User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>